[project]
name = "resolver"
version = "0.1.0"
description = "A SST app"
authors = [{ name = "Nick Wall", email = "mail@walln.dev" }]
dependencies = [
    "sst",
    "boto3 (>=1.42.59,<2.0.0)"
]
requires-python = "==3.13.*"


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["main"]


[tool.uv.sources]
sst = { git = "https://github.com/sst/sst.git", subdirectory = "sdk/python", branch = "dev" }